devops/k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: app
spec:
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: cloud.canister.io:5000/acibeee/auction-frontend
        resources:
          limits:
            memory: "1024M"
            cpu: "500m"
        ports:
        - containerPort: 3000
        livenessProbe:
          httpGet:
            path: /
            port: 80
            httpHeaders:
              - name: Test
                value: Test
          initialDelaySeconds: 10
          periodSeconds: 15
          timeoutSeconds: 10
      imagePullSecrets:
        - name: canister
