devops/k8s/frontend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend
  namespace: app
  labels:
    name: frontend
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: "letsencrypt-staging"
spec:
  tls:
    - hosts:
      - "frontend.racun.ninja"
      secretName: frontend-tls
  rules:
    - host: frontend.racun.ninja
      http:
        paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: frontend
              port: 
                number: 80
